--- a/index.html
+++ b/index.html
@@ -46,18 +46,65 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-contant">
-                <h3 class="teams-title"><span class="quick">Quick list</span><span class="of-our"> of our</span> <span class="Features" >Features</span></h3>
-                <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="teams-title"><span class="quick">Quick list</span><span class="of-our"> of our</span> <span
+                        class="Features">Features</span></h3>
+                <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
         <section class="features1">
+            <div class="features1-content">
+                <h3 class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <div class="card">
 
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+
+
+
+            </div>
+            <div class="features1-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10 Years</h2>
+                    <p> Experience</p>
+                </div>
+            </div>
         </section>
         <!-- facts section -->
         <section class="facts">
             <h3 class="section-title"> Some Facts</h3>
-            <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
         </section>
         <div class="facts-card-container">
             <!-- .card*4>img+h2.card-stats+p.card-title -->
@@ -82,6 +129,20 @@
                 <p class="card-title">Project Finished</p>
             </div>
         </div>
+        <!-- sponsors section -->
+        <section class="Sponsors">
+            <h3 class="section-title">Our Sponspors</h3>
+            <p class="teams-descrisption">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+
+            </div>
+        </section>
 
     </main>
     <footer>
